servicec-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: servicec
    version: v1
  name: servicec
spec:
  replicas: 1
  selector:
    matchLabels:
      app: servicec
      version: v1
  template:
    metadata:
      labels:
        app: servicec
        version: v1
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: servicec
        image: quay.io/rtaneja/ossm-tracing-servicea:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: servicec
  labels:
    app: servicec
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: servicec
